kubernetes-manifests/pihole/pihole.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2025.11.1
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: etc
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: etc
          hostPath:
            path: /var/lib/pihole/etc
        - name: dnsmasq
          hostPath:
            path: /var/lib/pihole/dnsmasq
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  annotations:
    # spec.loadBalancerIP is deprecated since k8s 1.24; this is MetalLB's
    # replacement for pinning the address.
    metallb.io/loadBalancerIPs: 192.168.1.2
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: pihole.krugten.org
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.krugten.org
      secretName: pihole-tls
  rules:
    - host: pihole.krugten.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
